[gd_scene load_steps=3 format=3 uid="uid://ckvgqp0or2qql"]

[ext_resource type="Script" path="res://Scenes/UIScenes/HUD.gd" id="1_4idyd"]
[ext_resource type="Script" path="res://Scenes/UIScenes/UI.gd" id="1_l64ye"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_l64ye")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4idyd")

[node name="InfoBar" type="ColorRect" parent="HUD"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.92549, 0.92549, 0.92549, 0.0705882)

[node name="H" type="HBoxContainer" parent="HUD/InfoBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLeft" type="Label" parent="HUD/InfoBar/H"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPS" type="Label" parent="HUD/InfoBar/H"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
size_flags_horizontal = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreRight" type="Label" parent="HUD/InfoBar/H"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
size_flags_horizontal = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
